# personal-ai-employee

./: .env.cloud.example  .env.example  .env.local.example  .gitignore  =1.40.0  =3.12.0  DEMO_SCRIPT.md  README.md  deploy_to_oracle.sh  ecosystem.config.js  ecosystem.config.local.js  mcp-tools.skill  openai-agents.skill  pm2.local.json  pyproject.toml  pytest.ini  requirements-gold.txt  requirements.txt  run_mcp_test.sh  streamlit.skill
.claude/: mcp_config.json.example
.claude/skills/: agent-memory.skill  argocd-gitops.skill  dapr-microservices.skill  kafka-event-driven.skill
.github/workflows/: deploy-dashboard.yml
.specify/memory/: constitution.md
agent_skills/: __init__.py  ai_analyzer.py  api_usage_tracker.py  approval_watcher.py  claim_manager.py  dashboard_updater.py  draft_generator.py  entities.py  env_validator.py  git_manager.py  git_sync_state.py  mcp_client.py  plan_executor.py  resource_monitor.py  stale_file_recovery.py  sync_alerts.py  vault_parser.py  vault_watcher.py
cloud_agent/src/: command_router.py  git_sync.py  orchestrator.py  startup_validator.py
deployment/git-hooks/: pre-commit
deployment/oracle/: deploy_dashboard.sh
deployment/oracle-cloud/: deploy.sh  setup.sh  start.sh
docs/: DEMO-SCRIPT.md  MANUAL_SETUP_GUIDE.md  odoo-integration.md
docs/bronze/: bronze-architecture.md  bronze-setup.md  bronze-testing.md  bronze-usage.md
nextjs_dashboard/: README.md  auth.ts  middleware.ts  package-lock.json  package.json  proxy.ts  setup-wsl-fast.sh  tailwind.config.js
scripts/: ceo_briefing.py  generate_ceo_briefing.py  gmail_watcher.py  init_vault.py  linkedin_generator.py  natural_command.py  odoo_watcher.py  plan_generator.py  plan_watcher.py  pm2_whatsapp_wrapper.sh  run_approval_watcher.py  run_local_agent.sh  setup_gmail_auth.py  setup_local_startup.sh  setup_pm2_logrotate.sh  setup_whatsapp_session.py  start_local_agent.sh  start_local_pm2.sh  wa_local_setup.py  wa_reauth.py  wa_session_to_cloud.sh  watch_inbox.py  whatsapp_qr_setup.py  whatsapp_send.py  whatsapp_watcher.py
tests/: README.md  conftest.py
vault/: Company_Handbook.md
watchers/: __init__.py  gmail_watcher.py
(+327 files in other folders)
