[project]
name = "personal-ai-employee"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "watchdog>=3.0.0",
    "pyyaml>=6.0",
    "anthropic>=0.18.0",
    "google-auth>=2.16.0",
    "google-api-python-client>=2.80.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
]

# Silver tier and above (not used in Bronze)
ai = [
    "anthropic>=0.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=agent_skills --cov=watchers --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"

# Black code formatter configuration
[tool.black]
line-length = 100
target-version = ['py311']

# Mypy type checking configuration
[tool.mypy]
python_version = "3.11"
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
